@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: string.c,v 1.333.2.42 2004/06/26 07:44:12 sesser Exp $ */
+/* $Id: string.c,v 1.333.2.43 2004/07/06 22:16:47 iliaa Exp $ */
 
 /* Synced with php 3.0 revision 1.193 1999-06-16 [ssb] */
 
@@ -637,8 +637,9 @@ PHP_FUNCTION(wordwrap)
 		return;
 	}
 
-	if (textlen == 0)
-		RETURN_FALSE;
+	if (textlen == 0) {
+		RETURN_EMPTY_STRING();
+	}
 
 	if (linelength == 0 && docut) {
 		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Can't force cut when width is zero.");
